--- a/src/components/header.css
+++ b/src/components/header.css
@@ -2,12 +2,17 @@
     color: white;
     text-align: center;
     padding: 20px 20px;
-    font-size: 25px;
+    font-size: 22px;
     /* font-weight: bold; */
     background-color: #101010;
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    opacity: 0.95;
 }
+
 .navigation span{
     font-size: 14px;
     margin-left: 20px;
