--- a/src/components/About.css
+++ b/src/components/About.css
@@ -76,7 +76,7 @@
     width: 360px;
 }
 .downloadBtn:hover {
-    background-color: greenyellow;
+    background-color: cyan;
     transform: scale(1.005);
 }
 
