more img optimization

--- a/src/components/ArtGrid.css
+++ b/src/components/ArtGrid.css
@@ -117,10 +117,10 @@
     }
 }
 
-.artAndOverlay {
+/* .artAndOverlay { */
     /* display: none; */
     /* display: none; */
-}
+/* } */
 
 .artOverlay {
     z-index: 9999;
