--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,7 @@
     margin: auto auto;
     width: 45%;
     text-align: center;
-    padding: 100px 0px 100px;
+    padding: 80px 0px 50px;
     /* border: 1px solid red; */
 }
 
@@ -17,7 +17,7 @@
     margin: auto auto;
     width: 37%;
     text-align: center;
-    padding: 150px 0px;
+    padding: 120px 0px;
     /* border: 1px solid red; */
 }
 .Contact {
@@ -27,7 +27,32 @@
     padding: 50px 0px;
     /* border: 1px solid red; */
 }
-
+.Controls {
+    margin: auto auto;
+    width: 30%;
+    text-align: center;
+    margin: 0px auto 80px;
+    padding: 15px ;
+    border-radius: 20px;
+    background-color: rgb(252, 252, 252);
+    border: 1px solid transparent;
+}
+.Controls:hover {
+    border: 1px solid grey;
+}
+.ControlsDark {
+    margin: auto auto;
+    width: 30%;
+    text-align: center;
+    margin: 0px auto 80px;
+    padding: 15px ;
+    border-radius: 20px;
+    background-color: #272727;
+    border: 1px solid transparent;
+}
+.ControlsDark:hover {
+    border: 1px solid rgb(86, 86, 86);
+}
 .ThankYou {
     color: whitesmoke;
     font-size: 40px;
@@ -41,7 +66,7 @@
 
 .title {
     color: whitesmoke;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
 }
 .titleDark {
@@ -52,12 +77,12 @@
 
 .description {
     color: #c9c9c9;
-    font-size: 18px;
+    font-size: 17px;
     line-height: 1.7;
 }
 .descriptionDark {
     color: #202020;
-    font-size: 18px;
+    font-size: 17px;
     line-height: 1.7;
 }
 
@@ -118,13 +143,8 @@
     }
 }
 
-.controls {
-    margin-top: 50px;
-    /* border: 1px solid red; */
-}
-
 .eachControl {
-    width: 50%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     margin: 0px auto 10px;
@@ -136,7 +156,7 @@
     /* border: 1px solid blue; */
 }
 .eachControlDark {
-    width: 50%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     margin: 0px auto 10px;
@@ -148,7 +168,7 @@
     /* border: 1px solid blue; */
 }
 .eachControl:hover {
-    width: 50%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     margin: 0px auto 10px;
@@ -157,7 +177,7 @@
     background-color: rgb(224, 224, 224);
 }
 .eachControlDark:hover {
-    width: 50%;
+    width: 80%;
     display: flex;
     justify-content: space-between;
     margin: 0px auto 10px;
