--- a/src/components/About.css
+++ b/src/components/About.css
@@ -13,6 +13,7 @@
     padding: 150px 0px 50px;
     /* border: 1px solid red; */
 }
+
 .Contribute {
     margin: auto auto;
     width: 37%;
@@ -20,6 +21,7 @@
     padding: 120px 0px;
     /* border: 1px solid red; */
 }
+
 .Contact {
     margin: auto auto;
     width: 50%;
@@ -205,4 +207,103 @@
     font-size: 16px;
     /* line-height: 1.5; */
 }
+
+
+
+
+
+/*  RESPONSIVENESS */
+
+@media (max-width: 500px) {
+    .About {
+        margin: auto auto;
+        width: 88%;
+        text-align: center;
+        padding: 20px 0px 20px;
+        /* border: 1px solid red; */
+    }
+    .Controls {
+        margin: auto auto;
+        width: 88%;
+        text-align: center;
+        margin: 0px auto 30px;
+        padding: 15px ;
+        border-radius: 20px;
+        background-color: rgb(252, 252, 252);
+        border: 1px solid transparent;
+    }
+    .ControlsDark {
+        margin: auto auto;
+        width: 88%;
+        text-align: center;
+        margin: 0px auto 30px;
+        padding: 15px ;
+        border-radius: 20px;
+        background-color: #272727;
+        border: 1px solid transparent;
+    }
+    .Download {
+        margin: auto auto;
+        width: 88%;
+        text-align: center;
+        padding: 150px 0px 50px;
+        /* border: 1px solid red; */
+    }
+
+    .Contribute {
+        margin: auto auto;
+        width: 88%;
+        text-align: center;
+        padding: 120px 0px;
+        /* border: 1px solid red; */
+    }
+    .Contact {
+        margin: auto auto;
+        width: 88%;
+        text-align: center;
+        padding: 50px 0px;
+        /* border: 1px solid red; */
+    }
+    .downloadBtns {
+        width: 88%;
+        margin: auto auto;
+        padding-top: 50px;
+    }
+    .downloadBtn {
+        border: none;
+        border-radius: 20px;
+        background-color: rgb(19, 137, 254);
+        padding: 10px 20px;
+        margin-bottom: 10px;
+        font-size: 16px;
+        width: 340px;
+    }
+    .eachControl {
+        width: 88%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0px auto 10px;
+        padding: 10px 15px 10px 20px;
+        border-radius: 50px;
+        /* box-shadow: 0px 0px 50px rgba(44, 44, 45, 0.219); */
+        background-color: whitesmoke;
+        /* border: 1px solid rgba(93, 93, 93, 0.128); */
+        /* border: 1px solid blue; */
+    }
+    .eachControlDark {
+        width: 88%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0px auto 10px;
+        padding: 10px 15px 10px 20px;
+        border-radius: 50px;
+        /* box-shadow: 0px 0px 50px rgba(44, 44, 45, 0.219); */
+        background-color: rgb(59, 59, 59);
+        /* border: 1px solid rgba(93, 93, 93, 0.128); */
+        /* border: 1px solid blue; */
+    }
+}
+
+
+
 
