--- a/src/components/ArtGrid.css
+++ b/src/components/ArtGrid.css
@@ -19,7 +19,6 @@
     animation: levitate 1 linear forward;
 }
 
-
 .gridViewSmall {
     display: grid;
     grid-template-columns: repeat(5, 150px);
@@ -36,7 +35,6 @@
     animation: levitate 1 linear forward;
 }
 
-
 @keyframes levitate {
     from {
         box-shadow: none
@@ -44,7 +42,6 @@
         box-shadow: 0px 0px 5px rgba(33, 230, 237, 0.418);
     }
 }
-
 
 .emptyArt {
     width: 140px;
@@ -148,4 +145,63 @@
     color: whitesmoke;
 }
 
+.letsAdmire {
+    width: 88%;
+    margin: auto auto;
+    padding-top: 20px;
+}
 
+
+/* RESPONSIVENESS */
+@media (max-width: 500px) {
+    .gridView {
+        display: grid;
+        grid-template-columns: repeat(5, 80px);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        margin: auto auto;
+        width: fit-content;
+        height: fit-content;
+        border-radius: 10px;
+        padding: 6px 6px;
+        border: 1px solid rgba(93, 93, 93, 0.128);
+        /* background-color: rgb(55, 54, 54);    */
+        box-shadow: 0px 0px 50px rgba(44, 44, 45, 0.419);
+        animation: levitate 1 linear forward;
+    }
+    .gridViewSmall {
+        display: grid;
+        grid-template-columns: repeat(5, 150px);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        margin: auto auto;
+        width: fit-content;
+        height: fit-content;
+        border-radius: 10px;
+        padding: 6px 6px;
+        border: 1px solid rgba(93, 93, 93, 0.128);
+        /* background-color: rgb(55, 54, 54);    */
+        box-shadow: 0px 0px 50px rgba(44, 44, 45, 0.419);
+        animation: levitate 1 linear forward;
+    }
+    .centerScale {
+        width: 80px;
+        height: 80px;
+        /* border: 1px solid red; */
+    }
+    .rightScale {
+        width: 80px;
+        height: 80px;
+        /* border: 1px solid red; */
+    }
+    .centerScaleSmall {
+        width: 150px;
+        height: 150px;
+        /* border: 1px solid red; */
+    }
+    .rightScaleSmall {
+        width: 150px;
+        height: 150px;
+        /* border: 1px solid red; */
+    }
+}
