--- a/src/components/header.css
+++ b/src/components/header.css
@@ -16,7 +16,7 @@
     font-size: 16px;
     /* margin-left: 20px; */
     color: #dcdcdc;
-    margin: 0px 10px 0px 20px;
+    margin: 0px 0px 0px 0px;
 }
 .navigation span:hover {
     color: cyan;
@@ -49,3 +49,49 @@ a {
 }
 
 
+@media (max-width: 500px) {
+    .headerStyle {
+        /* color: white; */
+        text-align: center;
+        padding: 14px 14px;
+        /* font-weight: bold; */
+        background-color: #101010;
+        display: flex;
+        justify-content: space-between;
+        position: sticky;
+        top: 0;
+        z-index: 9999;
+        opacity: 0.95;
+    }
+    .navigation span{
+        font-size: 12px;
+        /* margin-left: 20px; */
+        color: #dcdcdc;
+        margin: 0px 0px 0px 0px;
+        display: none;
+    }
+    .projectLogo {
+        width: 25px;
+        height: 25px;
+        cursor: pointer;
+        margin-right: 10px;
+        /* border: 1px solid blue; */
+    }
+    .projectTitle {
+        font-size: 18px;
+        color: white;
+        font-weight: bold;
+        margin: auto auto;
+        /* border: 1px solid red; */
+    }
+    .projectLogoAndName {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-left: 10px;
+        /* border: 1px solid red; */
+    }
+    .darkMode {
+        display: none;
+    }
+}
