--- a/src/components/About.css
+++ b/src/components/About.css
@@ -51,9 +51,16 @@
     border-radius: 20px;
     background-color: #272727;
     border: 1px solid transparent;
+    border: solid 1px;
+    clip-path: inset(0 round 1px);
 }
 .ControlsDark:hover {
     border: 1px solid rgb(86, 86, 86);
+    border-radius: 10px;
+    z-index: 9999;
+    border: solid 1px;
+    border-image: linear-gradient(90deg, purple, orange) 1;
+    clip-path: inset(0 round 2px);
 }
 .ThankYou {
     color: whitesmoke;
@@ -302,6 +309,45 @@
         /* border: 1px solid rgba(93, 93, 93, 0.128); */
         /* border: 1px solid blue; */
     }
+    .eachControl:hover {
+        width: 88%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0px auto 10px;
+        padding: 10px 15px 10px 20px;
+        border-radius: 50px;
+        background-color: rgb(224, 224, 224);
+    }
+    .eachControlDark:hover {
+        width: 88%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0px auto 10px;
+        padding: 10px 15px 10px 20px;
+        border-radius: 50px;
+        background-color: rgba(128, 128, 128, 0.239);
+    }
+        .title {
+        color: whitesmoke;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .titleDark {
+        color: black;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .description {
+        color: #c9c9c9;
+        font-size: 14px;
+        line-height: 1.7;
+    }
+    .descriptionDark {
+        color: #202020;
+        font-size: 14px;
+        line-height: 1.7;
+    }
+    
 }
 
 
