different resolutions added

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -62,6 +62,13 @@
     border-image: linear-gradient(90deg, purple, orange) 1;
     clip-path: inset(0 round 2px); */
 }
+.controlTitleHover:hover {
+    color: aqua;
+}
+.controlTitleHoverDark:hover {
+    color: rgb(107, 115, 252);
+}
+
 .ThankYou {
     color: whitesmoke;
     font-size: 40px;
@@ -221,6 +228,7 @@
 
 /*  RESPONSIVENESS */
 
+/* Phones */
 @media (max-width: 500px) {
     .About {
         margin: auto auto;
@@ -274,16 +282,16 @@
     .downloadBtns {
         width: 88%;
         margin: auto auto;
-        padding-top: 50px;
+        padding-top: 0px;
     }
     .downloadBtn {
         border: none;
         border-radius: 20px;
-        background-color: rgb(19, 137, 254);
-        padding: 10px 20px;
+        background-color: rgb(58, 149, 240);
+        padding: 10px 5px;
         margin-bottom: 10px;
-        font-size: 16px;
-        width: 340px;
+        font-size: 14px;
+        width: 330px;
     }
     .eachControl {
         width: 88%;
@@ -333,7 +341,7 @@
         border-radius: 50px;
         background-color: rgba(128, 128, 128, 0.239);
     }
-        .title {
+    .title {
         color: whitesmoke;
         font-size: 18px;
         font-weight: bold;
@@ -353,9 +361,171 @@
         font-size: 14px;
         line-height: 1.7;
     }
+    .Download {
+        margin: auto auto;
+        /* width: 35%; */
+        text-align: center;
+        padding: 60px 0px 0px;
+        /* border: 1px solid red; */
+    }
+    .Contribute {
+        margin: auto auto;
+        /* width: 37%; */
+        text-align: center;
+        padding: 50px 0px;
+        /* border: 1px solid red; */
+    }
+    .Contact {
+        margin: auto auto;
+        /* width: 50%; */
+        text-align: center;
+        padding: 0px 0px 50px;
+        /* border: 1px solid red; */
+    }
     
 }
 
+/* Tablets */
+@media (min-width: 521px) and (max-width: 1400px) {
+    .About {
+        margin: auto auto;
+        width: 70%;
+        text-align: center;
+        padding: 50px 0px 30px;
+        /* border: 1px solid red; */
+    }
+    .Controls {
+        margin: auto auto;
+        width: 50%;
+        text-align: center;
+        margin: 0px auto 50px;
+        padding: 15px ;
+        border-radius: 20px;
+        background-color: rgb(252, 252, 252);
+        border: 1px solid transparent;
+    }
+    .ControlsDark {
+        margin: auto auto;
+        width: 50%;
+        text-align: center;
+        margin: 0px auto 50px;
+        padding: 15px ;
+        border-radius: 20px;
+        background-color: #272727;
+        border: 1px solid transparent;
+    }
+    .Download {
+        margin: auto auto;
+        width: 70%;
+        text-align: center;
+        padding: 100px 0px 0px;
+        /* border: 1px solid red; */
+    }
 
+    .Contribute {
+        margin: auto auto;
+        width: 70%;
+        text-align: center;
+        padding: 80px 0px;
+        /* border: 1px solid red; */
+    }
+    .Contact {
+        margin: auto auto;
+        width: 88%;
+        text-align: center;
+        padding: 50px 0px;
+        /* border: 1px solid red; */
+    }
+    .downloadBtns {
+        width: 88%;
+        margin: auto auto;
+        padding-top: 0px;
+    }
+    .downloadBtn {
+        border: none;
+        border-radius: 20px;
+        background-color: rgb(19, 137, 254);
+        padding: 10px 20px;
+        margin-bottom: 10px;
+        font-size: 16px;
+        width: 360px;
+    }
+    .eachControl {
+        width: 88%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0px auto 10px;
+        padding: 10px 15px 10px 20px;
+        border-radius: 50px;
+        /* box-shadow: 0px 0px 50px rgba(44, 44, 45, 0.219); */
+        background-color: whitesmoke;
+        /* border: 1px solid rgba(93, 93, 93, 0.128); */
+        /* border: 1px solid blue; */
+    }
+    .eachControl:first-child {
+        display: none;
+    }
+    .eachControlDark {
+        width: 88%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0px auto 10px;
+        padding: 10px 15px 10px 20px;
+        border-radius: 50px;
+        /* box-shadow: 0px 0px 50px rgba(44, 44, 45, 0.219); */
+        background-color: rgb(59, 59, 59);
+        /* border: 1px solid rgba(93, 93, 93, 0.128); */
+        /* border: 1px solid blue; */
+    }
+    .eachControlDark:first-child {
+        display: none;
+    }
+    .eachControl:hover {
+        width: 88%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0px auto 10px;
+        padding: 10px 15px 10px 20px;
+        border-radius: 50px;
+        background-color: rgb(224, 224, 224);
+    }
+    .eachControlDark:hover {
+        width: 88%;
+        display: flex;
+        justify-content: space-between;
+        margin: 0px auto 10px;
+        padding: 10px 15px 10px 20px;
+        border-radius: 50px;
+        background-color: rgba(128, 128, 128, 0.239);
+    }
+    .title {
+        color: whitesmoke;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .titleDark {
+        color: black;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .description {
+        color: #c9c9c9;
+        font-size: 14px;
+        line-height: 1.7;
+    }
+    .descriptionDark {
+        color: #202020;
+        font-size: 14px;
+        line-height: 1.7;
+    }
+    .Contact {
+        margin: auto auto;
+        /* width: 50%; */
+        text-align: center;
+        padding: 0px 0px 50px;
+        /* border: 1px solid red; */
+    }
+    
+}
 
 
