--- a/src/components/EachArtPieceBig.css
+++ b/src/components/EachArtPieceBig.css
@@ -8,7 +8,7 @@
     display: grid;
     justify-content: center;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.226);
 }
 .eachArtPieceBigContainerDark {
@@ -21,7 +21,7 @@
     display: grid;
     justify-content: center;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     /* box-shadow: 0px 0px 50px rgba(44, 44, 45, 0.419); */
 }
 
@@ -200,7 +200,33 @@
 
 
 @media (max-width: 500px) {
-    .sizeBig {
+    .eachArtPieceBigContainer {
+        /* border: 1px solid red; */
+        width: fit-content;
+        margin: auto auto;
+        padding: 10px;
+        border-radius: 10px;
+        background-color: rgb(255, 255, 255);
+        display: grid;
+        justify-content: center;
+        text-align: center;
+        margin-top: 20px;
+        box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.226);
+    }
+    .eachArtPieceBigContainerDark {
+        /* border: 1px solid red; */
+        width: fit-content;
+        margin: auto auto;
+        padding: 10px;
+        border-radius: 10px;
+        background-color: rgb(46, 45, 45);
+        display: grid;
+        justify-content: center;
+        text-align: center;
+        margin-top: 20px;
+        /* box-shadow: 0px 0px 50px rgba(44, 44, 45, 0.419); */
+    }
+        .sizeBig {
         width: 380px;
         height: 380px;
         margin: auto auto;
